test/hotCases/errors/events/k_valueD.js
export const valueD = 1;
---
export const valueD = 2;
